alignment almost fixed

--- a/dnevnik/stylesheets/layout.css
+++ b/dnevnik/stylesheets/layout.css
@@ -6,7 +6,9 @@ p {
 
   display: flex;
 
-  margin-top: 8px;
+  width: 110px;
+  margin-top: 5px;
+  margin-bottom: 5px;
   margin-left: 8px;
 
 
@@ -15,13 +17,15 @@ p {
 .navbox {
   display: flex;
 
-  margin-top: 8px;
+  width: 270px;
+  margin-top: 5px;
+  margin-bottom: 5px;
 
   font-family: AristaProAlternate-Regular;
   font-size: 22px;
 
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: center;
 }
 a {
   text-decoration: none;
@@ -47,10 +51,14 @@ a {
 }
 
 .socialmedia {
-  display: flex;
   position: sticky;
 
-  margin-top: 8px;
+  display: flex;
+
+  width: 220px;
+  margin-top: 5px;
+  margin-right: 8px;
+  margin-bottom: 5px;
 
   font-family: AristaProAlternate-Regular;
   font-size: 22px;
@@ -60,20 +68,9 @@ a {
 }
 
 .socialmedia>img {
-  margin: 5px;
+  margin: 1px;
 }
 
-.nightday {
-  display: flex;
-
-  margin-top: 8px;
-
-  font-family: AristaProAlternate-Regular;
-  font-size: 22px;
-
-  align-items: center;
-  justify-content: space-evenly;
-}
 
 #top-stories {
   display: flex;
@@ -88,8 +85,9 @@ article {
   display: flex;
   flex-direction: column;
 
-  width: 308px;
-  height: 400px;
+  width: 300px;
+  min-height: 350px;
+  max-height: 700px;
   margin: 0px;
 
   transition: box-shadow .1s, background 1.5s;
@@ -107,8 +105,8 @@ article {
   height: 200px;
 
   color: rgba(#408c80, 0.5);
-  background-position:center !important;
-  background-size:cover !important;
+  background-position:center
+  background-size:cover
 
 }
 
@@ -124,7 +122,7 @@ article {
 }
 .zag {
   position: absolute;
-  bottom: 8px;
+  bottom: 20px;
   left: 16px;
 
   color: white;
@@ -151,6 +149,8 @@ article {
   display: flex;
   flex-direction: column;
 
+  margin: 2px 20px 20px 16px;
+
 }
 
 .image {
@@ -170,9 +170,7 @@ footer {
 
   width: 100%;
   height: 30px;
-
-  text-align: center;
-  align-content: space-between;
+  padding-left: 10px;
 
   color: black;
   border-top: 1px solid #408C80;
@@ -181,14 +179,21 @@ footer {
   font-size: 15px;
 
   align-items: center;
-  justify-content: flex-start;
-  flex-direction: row;
+  justify-content: space-between;
 }
 
 .circle {
-  width: 10px;
-  height: 10px;
-  -webkit-border-radius: 5px;
+  width: 5px;
+  height: 5px;
+  margin: 6px 8px 3px 8px;
+
   border-radius: 5px;
   background: #408C80;
-  margin: 30px;
+}
+
+.info {
+  display: flex;
+
+  justify-content: flex-start;
+  align-items: center;
+}
